--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hot-onion-restura",
+    "name": "hot-red-restaurant",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -11,7 +11,6 @@
         "@testing-library/user-event": "^7.2.1",
         "bootstrap": "^4.4.1",
         "firebase": "^7.12.0",
-        "jquery": "^1.9.1",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
